# InsightHoot

./: .gitignore  README.md  create_kind_cluster.sh  graphs.html
.github/workflows/: django.yaml  parent-workflow.yaml  sbt-scala-build.yaml
.metals/: metals.mv.db
Dashboard/: Dockerfile  init.sql  requirements.txt
Dashboard/dashboard/: .env  db.sqlite3  init.sql
Dashboard/dashboard/dashboard/: account_adapters.py  settings.py  urls.py
Dashboard/dashboard/feedviewer/: admin.py  models.py  tests.py  urls.py  views.py
Dashboard/dashboard/graphs/: admin.py  models.py  routers.py  serializers.py  tests.py  (+2 more)
InsightHoot/: build.sbt
InsightHoot/.bsp/: sbt.json
InsightHoot/project/: plugins.sbt
k8s_config/argo/: argo-namespace.yaml
k8s_config/kafka/: kafka-connect.yaml  kafka-producer.yaml  kafka-ui.yaml
kind/: create_kind_cluster.sh
kind/k8s_config/: ingress.yaml  kind-config.yaml  spark-pi.yaml
kind/producer-img/: producer.py  requirements.txt
producer-img/: Dockerfile
raw_data/: part-00000-e50ee3e2-7478-4aad-89b7-880216ce2ac7-c000.snappy.parquet  part-00003-e50ee3e2-7478-4aad-89b7-880216ce2ac7-c000.snappy.parquet
raw_data/topic_name=reddittech/: reddittech_02052024.parquet
raw_data/topic_name=slashdot/: slashdot_02052024.parquet
raw_data/topic_name=theguardian/: theguardian_02052024.parquet
reddit-wrapper/: Cargo.toml  docker-compose.yml
reddit-wrapper/src/: config.rs  main.rs  redditClient.rs  url.rs
reddit-wrapper/src/me/: me.rs
reddit-wrapper/src/subreddit/: feedoptions.rs  mod.rs  response.rs  stream_error.rs  subreddit.rs
(+72 files in other folders)
