[package]
name = "reddit-wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
lazy_static="1.4.0"
reqwest = { version = "0.11", default-features = false, features = ["json"] }
tokio = { version = "1", features = ["full"] }
roux = { version = "2"}
